# prombank-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README-deployment.md  README.md  SETUP.md  alembic.ini  coolify-docker-compose.yml  coolify-environment-variables.txt  create-github-repo.md  deploy-to-coolify.md  deployment-instructions.md  docker-compose.yml  entrypoint.sh  env.production  google-oauth-setup.md  pyproject.toml  requirements.txt  setup_test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
src/prombank/: __init__.py  auth.py  cli.py  config.py  database.py  mcp_server.py  server.py
src/prombank/api/: __init__.py  main.py
src/prombank/api/routes/: auth.py  categories.py  import_export.py  prompts.py  protected_prompts.py  tags.py  tokens.py
src/prombank/models/: __init__.py  base.py  prompt.py  token.py  user.py
src/prombank/schemas/: __init__.py  auth.py  category.py  common.py  prompt.py  tag.py  token.py
src/prombank/services/: __init__.py  auth_service.py  category_service.py  import_export_service.py  prompt_service.py  tag_service.py  token_service.py
src/prombank/static/: app.js  styles.css
src/prombank/templates/: index.html  login.html
