[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prombank-mcp"
version = "0.1.0"
description = "A comprehensive prompt management system with MCP server capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
    "pydantic>=2.5.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "httpx>=0.25.2",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "pydantic-settings>=2.1.0",
    "mcp>=0.9.0",
    "anyio>=4.2.0",
    "starlette>=0.27.0",
    "python-dateutil>=2.8.2",
    "pymysql>=1.1.0",
    "cryptography>=41.0.7",
    "gunicorn>=21.2.0",
    "psutil>=5.9.6",
]

[project.scripts]
prombank = "prombank.cli:main"
prombank-server = "prombank.server:run_server"
prombank-mcp = "prombank.mcp_server:main"

[project.urls]
Homepage = "https://github.com/SDG223157/prompt-house-premium"
Repository = "https://github.com/SDG223157/prompt-house-premium"
Issues = "https://github.com/SDG223157/prompt-house-premium/issues"

[tool.setuptools]
packages = ["prombank"]

[tool.setuptools.package-dir]
prombank = "src/prombank"